--- a/licensing-service/docker-compose.yml
+++ b/licensing-service/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - "SPRING_PROFILES_ACTIVE=dev"
+      SPRING_PROFILES_ACTIVE: "dev"
+
+      SPRING_CLOUD_CONFIG_URI:
+        http://configserver:8071
 
     networks:
       backend:
