--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <modules>
         <module>configserver</module>
         <module>licensing-service</module>
+        <module>eurekaserver</module>
     </modules>
     <build>
         <plugins>
