--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>configserver</module>
         <module>licensing-service</module>
         <module>eurekaserver</module>
+        <module>organization-service</module>
     </modules>
     <build>
         <plugins>
