--- a/licensing-service/src/main/resources/bootstrap.yml
+++ b/licensing-service/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 spring:
-  application:
-    name: licensing-service
-  profiles:
-    active: dev
-  cloud:
-    config:
-      uri: http://localhost:8071
+    application:
+     name: licensing-service 
+    profiles:
+      active: dev
+    cloud:
+        config: 
+            uri: http://configserver:8071
