--- a/gatewayserver/src/main/resources/bootstrap.yml
+++ b/gatewayserver/src/main/resources/bootstrap.yml
@@ -3,4 +3,10 @@ spring:
     name: gateway-server
   cloud:
     config:
-      uri: http://localhost:8071
+      uri: http://configserver:8071
+
+logging:
+  level:
+    com.netflix: WARN
+    org.springframework.web: WARN
+    com.optimagrowth: DEBUG
