--- a/configserver/src/main/resources/config/gateway-server.yml
+++ b/configserver/src/main/resources/config/gateway-server.yml
@@ -1,6 +1,12 @@
 server:
   port: 8072
 
+logstash.host: 3.136.161.26:5000
+
+logging:
+  config: classpath:logback-delayed.xml
+
+
 eureka:
   instance:
     preferIpAddress: true
@@ -10,8 +16,12 @@ eureka:
     serviceUrl:
       defaultZone: http://eurekaserver:8070/eureka/
 
-
 spring:
+  zipkin:
+    baseUrl: http://zipkin:9411
+  sleuth:
+    sampler:
+      percentage: 1
   cloud:
     loadbalancer.ribbon.enabled: false
     gateway:
@@ -22,15 +32,14 @@ spring:
             - Path=/organization/**
           filters:
             - RewritePath=/organization/(?<path>.*), /$\{path}
+            - RemoveRequestHeader= Cookie,Set-Cookie
         - id: licensing-service
           uri: lb://licensing-service
           predicates:
             - Path=/license/**
           filters:
             - RewritePath=/license/(?<path>.*), /$\{path}
-
-
-
+            - RemoveRequestHeader= Cookie,Set-Cookie
 
 
 management:
@@ -38,4 +47,6 @@ management:
     web:
       exposure:
         include: "*"
-
+        
+        
+        
